--- a/korimi-110440771/config/settings_data.json
+++ b/korimi-110440771/config/settings_data.json
@@ -1,5 +1,66 @@
 {
   "current": {
+    "color_link": "#FFF",
+    "aviso-promociones-check": true,
+    "aviso-promociones-text": "Mother's Day: Get your free shipping on orders over 800.00 MXN — Enter promocode: MOMMY5",
+    "aviso-promociones-time": "3",
+    "modal-mail-check": true,
+    "modal-mail-titulo": "Follow the rainbow",
+    "modal-mail-text": "Get 10% off your first order when you susbcribe to our newsletter.",
+    "modal-mail-placeholder": "yourname@mail.com",
+    "modal-mail-boton": "get it",
+    "modal-mail-time": "3",
+    "homeslide-1-true": true,
+    "homeslide-1-izq-text": "La leyenda del Coyote Azul",
+    "homeslide-1-izq-prod": "",
+    "homeslide-1-der-text": "",
+    "homeslide-1-der-prod": "cushion-conejos",
+    "homeslide-2-true": true,
+    "homeslide-2-izq-text": "",
+    "homeslide-2-izq-prod": "",
+    "homeslide-2-der-text": "",
+    "homeslide-2-der-prod": "",
+    "homeslide-3-true": true,
+    "homeslide-3-izq-text": "",
+    "homeslide-3-izq-prod": "",
+    "homeslide-3-der-text": "",
+    "homeslide-3-der-prod": "",
+    "homeslide-4-true": true,
+    "homeslide-4-izq-text": "",
+    "homeslide-4-izq-prod": "",
+    "homeslide-4-der-text": "",
+    "homeslide-4-der-prod": "",
+    "homeslide-5-true": true,
+    "homeslide-5-izq-text": "",
+    "homeslide-5-izq-prod": "",
+    "homeslide-5-der-text": "",
+    "homeslide-5-der-prod": "",
+    "homeslide-6-true": true,
+    "homeslide-6-izq-text": "",
+    "homeslide-6-izq-prod": "",
+    "homeslide-6-der-text": "",
+    "homeslide-6-der-prod": "",
+    "homeitem-izq-tit": "Carmen de Chenalhó",
+    "homeitem-izq-des": "Ella es quien borda nuestras maravillas",
+    "homeitem-izq-url": "",
+    "homeitem-centro-tit": "Lookbook 2016",
+    "homeitem-centro-des": "Nuevos pañaleros",
+    "homeitem-centro-url": "lookbook",
+    "homeitem-der-tit": "De nuestra fauna",
+    "homeitem-der-des": "El conejo sagrado",
+    "homeitem-der-url": "",
+    "homesubmenu-stories": false,
+    "homesubmenu-about": false,
+    "social-check-fb": true,
+    "social-url-fb": "",
+    "social-check-tw": true,
+    "social-url-tw": "",
+    "social-check-pt": true,
+    "social-url-pt": "",
+    "social-check-yt": true,
+    "social-url-yt": "",
+    "social-check-in": true,
+    "social-url-in": "",
     "checkout_use_header_image": false,
     "checkout_logo": "",
     "checkout_logo_position": "left",
